src/objects/ddrive__Ticket_Holder__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>DD Ticket Holders</relationshipLabel>
        <relationshipName>DD_Ticket_Holders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Address_1__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Address_2__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Business_Phone_Extension__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Business Phone Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Business_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_City__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Company_Name__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Country__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Email__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_First_Name__c</fullName>
        <label>Constituent First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Home_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Last_Name__c</fullName>
        <label>Constituent Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Middle_Initial__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Mobile_Phone__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_Postal_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Constituent_State__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Constituent State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Donor__c</fullName>
        <label>Constituent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_City__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Country__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Fiscal_Year__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Id__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Organization_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Organization Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Program_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Program Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Site_Code__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Site Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_State__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Status__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event_Venue__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Event Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ddrive__Number_of_Tickets__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Number of Tickets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Host__c</fullName>
        <label>Referrer Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Path__c</fullName>
        <label>Referrer Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Referrer_Token__c</fullName>
        <label>Referrer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Sum_Benefit_Value__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Sum Benefit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Sum_Tax_Deduction__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Sum Tax Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ddrive__Ticket_Date_Entered__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Ticket Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Ticket_Source__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Ticket Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Ticket_Type__c</fullName>
        <description>Part of DonorDrive integration</description>
        <label>Ticket Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DD Ticket Holder</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <columns>NAME</columns>
        <columns>ddrive__Donor__c</columns>
        <columns>ddrive__Event_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DD Ticket Holders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>